kubechat/templates/agones.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agones-deployment
  namespace: kubechat
  labels:
    app: agones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agones
  template:
    metadata:
      labels:
        app: agones
    spec:
      containers:
      - name: agones
        image: xxatrain223/kubechat-agones:0.1.0
        ports:
        - containerPort: 80
