kubechat/templates/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: kubechat
  labels:
    app: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: kubechatclient:0.1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 80
