kubechat/templates/client.serverside.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-serverside-deployment
  namespace: kubechat
  labels:
    app: client-serverside
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-serverside
  template:
    metadata:
      labels:
        app: client-serverside
    spec:
      containers:
      - name: client
        image: xxatrain223/kubechat-client-serverside:0.1.3
        ports:
        - containerPort: 80
