kubechat/templates/client.webassembly.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-webassembly-deployment
  namespace: kubechat
  labels:
    app: client-webassembly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-webassembly
  template:
    metadata:
      labels:
        app: client-webassembly
    spec:
      containers:
      - name: client
        image: xxatrain223/kubechat-client-webassembly:0.1.5
        ports:
        - containerPort: 80
