kubechat/templates/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: kubechat
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: xxatrain223/kubechatserver:0.1.0
        ports:
        - containerPort: 80
