kubechat/templates/client.serverside.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-serverside-service
  namespace: kubechat
spec:
  selector:
    app: client-serverside
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
