kubechat/templates/client.webassembly.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-webassembly-service
  namespace: kubechat
spec:
  selector:
    app: client-webassembly
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
