kubechat/templates/gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: kubechat
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
