kubechat/templates/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: kubechat
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
