kubechat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubechat-ingress
  namespace: kubechat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: serverside.client.kubechat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-serverside-service
            port:
              number: 80
  - host: webassembly.client.kubechat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-webassembly-service
            port:
              number: 80
  - host: server.kubechat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
